openshift_config_files/webfrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: cocktailwebfrontend
    project: cocktail
  name: cocktailwebfrontend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: cocktailwebfrontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cocktailwebfrontend
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps-crc.testing/kathy/frontend:latest
        imagePullPolicy: Always
        name: tryandgetnginxworking
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
