openshift_config_files/cocktailapiservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cocktailapi
    project: cocktail
  name: cocktailapi
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cocktailapi
  sessionAffinity: None
  type: ClusterIP
