openshift_config_files/frontendservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontendservice
    project: cocktail
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
  name: frontendservice
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cocktailwebfrontend
  sessionAffinity: None
  type: ClusterIP
