openshift_config_files/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: webfrontendroute
      project: cocktail
    name: webfrontendroute
  spec:
    port:
      targetPort: 8080
    tls:
      termination: edge
    to:
      kind: Service
      name: frontendservice
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
